--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,8 +7,22 @@
     android:orientation="vertical"
     tools:context=".activity.GameActivity">
 
-        <SurfaceView
+    <SurfaceView
             android:id="@+id/surfaceView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/playerHealth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lives" />
     </LinearLayout>
+
+
+</LinearLayout>
