--- a/app/src/main/res/layout/activity_scoreboards.xml
+++ b/app/src/main/res/layout/activity_scoreboards.xml
@@ -10,13 +10,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/score_switchModeBtn"
+            style="@android:style/"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -63,6 +63,17 @@
             android:textColor="@color/black"/>
 
         <TextView
+            android:id="@+id/scoreEntry_levels"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/score_head_levels"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+
+        <TextView
             android:id="@+id/scoreEntry_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -77,7 +88,7 @@
     <ListView
         android:id="@+id/score_listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
