--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="topPanel">#34B9DA</color>
     <color name="black">#010101</color>
     <color name="white">#FFFFFF</color>
+    <color name="dark">#444444</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
